--- a/poc_opened.ipynb
+++ b/poc_opened.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "cf881731",
    "metadata": {},
    "outputs": [
@@ -28,47 +28,47 @@
       "Requirement already satisfied: torch in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (2.8.0)\n",
       "Requirement already satisfied: sentence-transformers in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (5.1.2)\n",
       "Requirement already satisfied: anthropic in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (0.72.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (4.15.0)\n",
       "Requirement already satisfied: jinja2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: networkx in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.2.1)\n",
+      "Requirement already satisfied: filelock in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.19.1)\n",
       "Requirement already satisfied: sympy>=1.13.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (1.14.0)\n",
       "Requirement already satisfied: fsspec in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (2025.10.0)\n",
-      "Requirement already satisfied: networkx in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: filelock in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.19.1)\n",
       "Requirement already satisfied: scikit-learn in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (1.6.1)\n",
-      "Requirement already satisfied: Pillow in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (11.3.0)\n",
+      "Requirement already satisfied: scipy in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (1.13.1)\n",
       "Requirement already satisfied: tqdm in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (4.67.1)\n",
       "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (4.57.1)\n",
       "Requirement already satisfied: huggingface-hub>=0.20.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (0.36.0)\n",
-      "Requirement already satisfied: scipy in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (1.13.1)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (2.12.4)\n",
-      "Requirement already satisfied: sniffio in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (1.3.1)\n",
+      "Requirement already satisfied: Pillow in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (11.3.0)\n",
       "Requirement already satisfied: distro<2,>=1.7.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (1.9.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (4.11.0)\n",
+      "Requirement already satisfied: sniffio in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (1.3.1)\n",
       "Requirement already satisfied: docstring-parser<1,>=0.15 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.17.0)\n",
       "Requirement already satisfied: jiter<1,>=0.4.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.11.1)\n",
       "Requirement already satisfied: httpx<1,>=0.25.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.28.1)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (4.11.0)\n",
-      "Requirement already satisfied: idna>=2.8 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anyio<5,>=3.5.0->anthropic) (3.11)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (2.12.4)\n",
       "Requirement already satisfied: exceptiongroup>=1.0.2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anyio<5,>=3.5.0->anthropic) (1.3.0)\n",
+      "Requirement already satisfied: idna>=2.8 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anyio<5,>=3.5.0->anthropic) (3.11)\n",
       "Requirement already satisfied: certifi in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpx<1,>=0.25.0->anthropic) (2025.10.5)\n",
       "Requirement already satisfied: httpcore==1.* in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpx<1,>=0.25.0->anthropic) (1.0.9)\n",
       "Requirement already satisfied: h11>=0.16 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpcore==1.*->httpx<1,>=0.25.0->anthropic) (0.16.0)\n",
-      "Requirement already satisfied: packaging>=20.9 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (25.0)\n",
-      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (1.2.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.3)\n",
       "Requirement already satisfied: requests in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2.32.5)\n",
+      "Requirement already satisfied: packaging>=20.9 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (25.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.3)\n",
+      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (1.2.0)\n",
       "Requirement already satisfied: pydantic-core==2.41.5 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (2.41.5)\n",
       "Requirement already satisfied: annotated-types>=0.6.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (0.7.0)\n",
       "Requirement already satisfied: typing-inspection>=0.4.2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (0.4.2)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
       "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.22.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2025.11.3)\n",
       "Requirement already satisfied: numpy>=1.17 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2.0.2)\n",
       "Requirement already satisfied: safetensors>=0.4.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.6.2)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2025.11.3)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.5.0)\n",
       "Requirement already satisfied: charset_normalizer<4,>=2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.4.4)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from scikit-learn->sentence-transformers) (1.5.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.5.0)\n",
       "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from scikit-learn->sentence-transformers) (3.6.0)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from scikit-learn->sentence-transformers) (1.5.2)\n",
       "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.3 is available.\n",
       "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -89,21 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8000a0cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jrosenb8/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/jrosenb8/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json \n",
     "import ignore\n",
@@ -123,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "5551ddec",
    "metadata": {},
    "outputs": [
@@ -157,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "92af8a72",
    "metadata": {},
    "outputs": [],
@@ -193,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f2855932",
    "metadata": {},
    "outputs": [],
@@ -212,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "f9dd3a8f",
    "metadata": {},
    "outputs": [
@@ -246,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b27dd541",
    "metadata": {},
    "outputs": [],
@@ -312,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0dd6cd86",
    "metadata": {},
    "outputs": [
@@ -320,7 +309,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'answer': \"Based on the available research, there is evidence that reducing class size from 25 to 15 students can have positive effects on student achievement, particularly in elementary reading where a 12% improvement was observed. However, the same study found no significant effect on mathematics achievement. It's worth noting that the research also indicated that cost-benefit analysis suggested targeted tutoring might be more efficient than class size reduction, suggesting that smaller classes alone may not be the most cost-effective intervention.\", 'used_summaries': ['doc_016']}\n"
+      "{'answer': 'Research on class size reduction found that decreasing class sizes from 25 to 15 students resulted in a 12% improvement in elementary reading scores, though it had no significant effect on mathematics achievement. However, cost-benefit analysis indicated that targeted tutoring might be a more efficient approach than class size reduction (doc_016).', 'used_summaries': ['doc_016']}\n"
      ]
     }
    ],
@@ -352,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "708591ff",
    "metadata": {},
    "outputs": [],
@@ -405,7 +394,7 @@
     "\n",
     "        == Relevant Information ==\n",
     "        Reference Summaries: You will be provided with structured summaries of research papers.\n",
-    "        Relevance Filtering: Only use information from the summaries if it is directly relevant to the query.\n",
+    "        Relevance Filtering: Only use information from the summaries if it is directly relevant to the query. You may use mutliple summaries if they are all relevant.\n",
     "        Answer Generation: Generate concise, accurate, and clear answers to the user query.\n",
     "        Citation: When using information from a summary, include a reference to the summary’s ID.\n",
     "\n",
@@ -415,7 +404,8 @@
     "        ==EXAMPLE OUTPUT==\n",
     "        {{\n",
     "        \"answer\": <\"Answer based on relevant summaries.\">,\n",
-    "        \"used_summaries\": <[\"id1\", ..., \"idn\"]>\n",
+    "        \"used_summaries\": <[\"id1\", ..., \"idn\"]>,\n",
+    "        \"all_summaries\": <[\"id1\", ..., \"idn\"]>\n",
     "        }}\n",
     "\n",
     "        ==IMPORTANT==\n",
@@ -424,6 +414,11 @@
     "        - Respond only by referencing the given input. If none of the input is relevant to the user query, then respond that you have nothing useful to say.\n",
     "        - Do not elaborate at all in your response outside of the input data.\n",
     "        - Be concise\n",
+    "\n",
+    "        *REMEBER* \n",
+    "        - Your response **must be valid JSON only**.\n",
+    "        - DO NOT include ```json, ``` or any other markdown syntax.\n",
+    "        - Do NOT include explanations, greetings, or extra text—only the JSON.\n",
     "        \"\"\"\n",
     "        return prompt\n",
     "\n",
@@ -440,16 +435,17 @@
     "        )\n",
     "\n",
     "        try:\n",
-    "            response_obj = json.loads(response.content[0].text)\n",
+    "            response = response.content[0].text.strip(r'```json').strip(r'```')\n",
+    "            response_obj = json.loads(response)\n",
     "        except json.JSONDecodeError:\n",
-    "            response_obj = {\"error\": \"Failed to parse response JSON\", \"raw_text\": response.content[0].text}\n",
+    "            response_obj = {\"error\": \"Failed to parse response JSON\", \"raw_text\": response}\n",
     "\n",
     "        return response_obj\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "6276bda6",
    "metadata": {},
    "outputs": [
@@ -458,9 +454,14 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"answer\": \"Research shows that outdoor classes can have significant benefits for students. Students who participated in nature-based learning for at least 2 hours per week demonstrated a 26% reduction in stress markers and an 18% improvement in creative problem-solving tasks compared to students in indoor-only settings (doc_012).\",\n",
+      "  \"answer\": \"Research on outdoor classes shows significant benefits for students. Students who participated in nature-based learning for at least 2 hours per week demonstrated a 26% reduction in stress markers and an 18% improvement in creative problem-solving tasks compared to students in indoor-only settings (doc_012).\",\n",
       "  \"used_summaries\": [\n",
       "    \"doc_012\"\n",
+      "  ],\n",
+      "  \"all_summaries\": [\n",
+      "    \"doc_012\",\n",
+      "    \"doc_005\",\n",
+      "    \"doc_014\"\n",
       "  ]\n",
       "}\n"
      ]
@@ -477,6 +478,75 @@
     "\n",
     "print(json.dumps(response, indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6013a799",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"answer\": \"Based on research with 1,500 ESL students, allowing code-switching between students' native language and English during initial concept introduction can improve comprehension by 44%. This approach challenges English-only immersion policies and suggests that strategic use of students' native languages can be an effective instructional strategy for English language learners (doc_013).\",\n",
+      "  \"used_summaries\": [\n",
+      "    \"doc_013\"\n",
+      "  ],\n",
+      "  \"all_summaries\": [\n",
+      "    \"doc_013\",\n",
+      "    \"doc_010\",\n",
+      "    \"doc_016\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"How can I help my students who speak english as a second language?\"\n",
+    "response = rag_generator.query_llm(query, sources=3)\n",
+    "print(json.dumps(response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7287d07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"answer\": \"While there is no direct research in the provided summaries about meditation specifically done outside, relevant findings suggest potential benefits. Mindfulness meditation programs for high school students showed a 15% reduction in test anxiety and 8% improvement in test scores, though these effects required a full 8-week program (doc_020). Separately, outdoor education programs demonstrated that students spending at least 2 hours per week in nature-based learning experienced a 26% reduction in stress markers and 18% improvement in creative problem-solving compared to indoor-only groups (doc_012). Combining meditation with outdoor settings could potentially leverage benefits from both approaches, though no specific research on this combination is available in the current data.\",\n",
+      "  \"used_summaries\": [\n",
+      "    \"doc_020\",\n",
+      "    \"doc_012\"\n",
+      "  ],\n",
+      "  \"all_summaries\": [\n",
+      "    \"doc_020\",\n",
+      "    \"doc_012\",\n",
+      "    \"doc_019\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = \"Would meditating outside be useful to my students?\"\n",
+    "response = rag_generator.query_llm(query, sources=3)\n",
+    "print(json.dumps(response, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e64c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
