--- a/poc_opened.ipynb
+++ b/poc_opened.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "cf881731",
    "metadata": {},
    "outputs": [
@@ -24,59 +24,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: torch in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (2.8.0)\n",
-      "Requirement already satisfied: sentence-transformers in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (5.1.2)\n",
-      "Requirement already satisfied: anthropic in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (0.72.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: jinja2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: networkx in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.2.1)\n",
-      "Requirement already satisfied: filelock in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (3.19.1)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: fsspec in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from torch) (2025.10.0)\n",
-      "Requirement already satisfied: scikit-learn in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (1.6.1)\n",
-      "Requirement already satisfied: scipy in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (1.13.1)\n",
-      "Requirement already satisfied: tqdm in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (4.67.1)\n",
-      "Requirement already satisfied: transformers<5.0.0,>=4.41.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (4.57.1)\n",
-      "Requirement already satisfied: huggingface-hub>=0.20.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (0.36.0)\n",
-      "Requirement already satisfied: Pillow in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sentence-transformers) (11.3.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (1.9.0)\n",
-      "Requirement already satisfied: anyio<5,>=3.5.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (4.11.0)\n",
-      "Requirement already satisfied: sniffio in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (1.3.1)\n",
-      "Requirement already satisfied: docstring-parser<1,>=0.15 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.17.0)\n",
-      "Requirement already satisfied: jiter<1,>=0.4.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.11.1)\n",
-      "Requirement already satisfied: httpx<1,>=0.25.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (0.28.1)\n",
-      "Requirement already satisfied: pydantic<3,>=1.9.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anthropic) (2.12.4)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anyio<5,>=3.5.0->anthropic) (1.3.0)\n",
-      "Requirement already satisfied: idna>=2.8 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from anyio<5,>=3.5.0->anthropic) (3.11)\n",
-      "Requirement already satisfied: certifi in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpx<1,>=0.25.0->anthropic) (2025.10.5)\n",
-      "Requirement already satisfied: httpcore==1.* in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpx<1,>=0.25.0->anthropic) (1.0.9)\n",
-      "Requirement already satisfied: h11>=0.16 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from httpcore==1.*->httpx<1,>=0.25.0->anthropic) (0.16.0)\n",
-      "Requirement already satisfied: requests in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (2.32.5)\n",
-      "Requirement already satisfied: packaging>=20.9 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (25.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (6.0.3)\n",
-      "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from huggingface-hub>=0.20.0->sentence-transformers) (1.2.0)\n",
-      "Requirement already satisfied: pydantic-core==2.41.5 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (2.41.5)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (0.7.0)\n",
-      "Requirement already satisfied: typing-inspection>=0.4.2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from pydantic<3,>=1.9.0->anthropic) (0.4.2)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.22.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2025.11.3)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (2.0.2)\n",
-      "Requirement already satisfied: safetensors>=0.4.3 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from transformers<5.0.0,>=4.41.0->sentence-transformers) (0.6.2)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (3.4.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from requests->huggingface-hub>=0.20.0->sentence-transformers) (2.5.0)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from scikit-learn->sentence-transformers) (3.6.0)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /Users/jrosenb8/Library/Python/3.9/lib/python/site-packages (from scikit-learn->sentence-transformers) (1.5.2)\n",
-      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 25.3 is available.\n",
-      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install torch sentence-transformers anthropic"
+    "%pip install -qq torch sentence-transformers anthropic"
    ]
   },
   {
@@ -89,10 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8000a0cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jrosenb8/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "/Users/jrosenb8/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json \n",
     "import ignore\n",
@@ -112,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "5551ddec",
    "metadata": {},
    "outputs": [
@@ -121,10 +85,15 @@
      "output_type": "stream",
      "text": [
       "doc_001||A longitudinal study of 1,200 middle school students found that incorporating spaced repetition into mathematics curriculum improved long-term retention by 42% compared to massed practice. Students who reviewed concepts at intervals of 1, 3, and 7 days showed significantly better performance on assessments administered three months later.\n",
+      "\n",
       "doc_002||Research examining 500 undergraduate students revealed that handwritten notes led to 23% better conceptual understanding compared to laptop note-taking. The constraint of slower handwriting appeared to force students to process and synthesize information more deeply during lectures.\n",
+      "\n",
       "doc_003||A meta-analysis of 74 studies found that peer tutoring programs increased academic achievement by an average effect size of 0.59 standard deviations. Benefits were particularly pronounced when tutors were trained in questioning techniques and given structured materials.\n",
+      "\n",
       "doc_004||Investigation of 15 elementary schools implementing project-based learning showed mixed results: while student engagement increased by 67%, standardized test scores showed no significant improvement in the first two years of implementation. Teachers reported needing 18-24 months to effectively adapt their practice.\n",
-      "doc_005||Analysis of online learning outcomes during 2020-2021 revealed that synchronous video classes with breakout rooms achieved 89% of the learning gains of in-person instruction, while asynchronous-only formats achieved only 64%. Student isolation was the primary predictor of poor outcomes.\n"
+      "\n",
+      "doc_005||Analysis of online learning outcomes during 2020-2021 revealed that synchronous video classes with breakout rooms achieved 89% of the learning gains of in-person instruction, while asynchronous-only formats achieved only 64%. Student isolation was the primary predictor of poor outcomes.\n",
+      "\n"
      ]
     }
    ],
@@ -133,7 +102,8 @@
     "docs = [f'{k}||{v}' for k, v in docs.items()]  # Make them a list with some metadata fusion.\n",
     "\n",
     "for doc in docs[:5]:  # print a few docs as an example\n",
-    "    print(doc)"
+    "    print(doc)\n",
+    "    print()"
    ]
   },
   {
@@ -146,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "92af8a72",
    "metadata": {},
    "outputs": [],
@@ -182,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f2855932",
    "metadata": {},
    "outputs": [],
@@ -201,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "f9dd3a8f",
    "metadata": {},
    "outputs": [
@@ -210,8 +180,11 @@
      "output_type": "stream",
      "text": [
       "0.5860 | doc_012||Research on outdoor education programs found that students who spent at least 2 hours per week in nature-based learning showed 26% reduction in stress markers and 18% improvement in creative problem-solving tasks compared to indoor-only control groups.\n",
+      "\n",
       "0.3282 | doc_004||Investigation of 15 elementary schools implementing project-based learning showed mixed results: while student engagement increased by 67%, standardized test scores showed no significant improvement in the first two years of implementation. Teachers reported needing 18-24 months to effectively adapt their practice.\n",
-      "0.2837 | doc_005||Analysis of online learning outcomes during 2020-2021 revealed that synchronous video classes with breakout rooms achieved 89% of the learning gains of in-person instruction, while asynchronous-only formats achieved only 64%. Student isolation was the primary predictor of poor outcomes.\n"
+      "\n",
+      "0.2837 | doc_005||Analysis of online learning outcomes during 2020-2021 revealed that synchronous video classes with breakout rooms achieved 89% of the learning gains of in-person instruction, while asynchronous-only formats achieved only 64%. Student isolation was the primary predictor of poor outcomes.\n",
+      "\n"
      ]
     }
    ],
@@ -222,7 +195,8 @@
     "results = search_top_k(model, query, doc_embs, docs, k=n)\n",
     "\n",
     "for score, doc in results:\n",
-    "    print(f\"{score:.4f} | {doc}\")"
+    "    print(f\"{score:.4f} | {doc}\")\n",
+    "    print()"
    ]
   },
   {
@@ -235,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "b27dd541",
    "metadata": {},
    "outputs": [],
@@ -301,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "0dd6cd86",
    "metadata": {},
    "outputs": [
@@ -309,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'answer': 'Research on class size reduction found that decreasing class sizes from 25 to 15 students resulted in a 12% improvement in elementary reading scores, though it had no significant effect on mathematics achievement. However, cost-benefit analysis indicated that targeted tutoring might be a more efficient approach than class size reduction (doc_016).', 'used_summaries': ['doc_016']}\n"
+      "{'answer': 'Research on class size reduction from 25 to 15 students showed a 12% improvement in elementary reading scores, though no significant effect was observed in mathematics achievement. However, cost-benefit analysis indicated that targeted tutoring might be a more efficient approach than reducing class sizes (doc_016).', 'used_summaries': ['doc_016']}\n"
      ]
     }
    ],
@@ -341,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "708591ff",
    "metadata": {},
    "outputs": [],
@@ -445,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "6276bda6",
    "metadata": {},
    "outputs": [
@@ -481,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "6013a799",
    "metadata": {},
    "outputs": [
@@ -490,7 +464,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"answer\": \"Based on research with 1,500 ESL students, allowing code-switching between students' native language and English during initial concept introduction can improve comprehension by 44%. This approach challenges English-only immersion policies and suggests that strategic use of students' native languages can be an effective instructional strategy for English language learners (doc_013).\",\n",
+      "  \"answer\": \"Research shows that allowing code-switching between students' native language and English during initial concept introduction can significantly improve comprehension. A study of 1,500 ESL students found that this approach improved comprehension by 44%, which challenges the effectiveness of English-only immersion policies (doc_013).\",\n",
       "  \"used_summaries\": [\n",
       "    \"doc_013\"\n",
       "  ],\n",
@@ -511,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "7287d07a",
    "metadata": {},
    "outputs": [
@@ -520,7 +494,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"answer\": \"While there is no direct research in the provided summaries about meditation specifically done outside, relevant findings suggest potential benefits. Mindfulness meditation programs for high school students showed a 15% reduction in test anxiety and 8% improvement in test scores, though these effects required a full 8-week program (doc_020). Separately, outdoor education programs demonstrated that students spending at least 2 hours per week in nature-based learning experienced a 26% reduction in stress markers and 18% improvement in creative problem-solving compared to indoor-only groups (doc_012). Combining meditation with outdoor settings could potentially leverage benefits from both approaches, though no specific research on this combination is available in the current data.\",\n",
+      "  \"answer\": \"Combining meditation with outdoor settings could be beneficial for your students. Research shows that mindfulness meditation in high school students led to a 15% reduction in test anxiety and 8% improvement in test scores, though programs need to be at least 8 weeks long to be effective (doc_020). Additionally, students who spent at least 2 hours per week in nature-based learning showed a 26% reduction in stress markers and 18% improvement in creative problem-solving tasks (doc_012). While these studies examined meditation and outdoor education separately, both approaches show positive effects on student wellbeing and performance.\",\n",
       "  \"used_summaries\": [\n",
       "    \"doc_020\",\n",
       "    \"doc_012\"\n",
@@ -539,14 +513,6 @@
     "response = rag_generator.query_llm(query, sources=3)\n",
     "print(json.dumps(response, indent=2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3e64c2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
